[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sketches/robot-arms.png" type="Texture" id=1]
[ext_resource path="res://assets/sketches/robot-body.png" type="Texture" id=2]
[ext_resource path="res://scenes/player/PlayerRobot.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/pick.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/robot_walking.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.24792
height = 10.2557

[sub_resource type="CircleShape2D" id=2]
radius = 5.38848

[sub_resource type="Animation" id=3]
resource_name = "still"
tracks/0/type = "value"
tracks/0/path = NodePath("WalkingSFX:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "walking"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WalkingSFX:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PlayerRobot" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.766678, 2.76006 )
shape = SubResource( 1 )

[node name="ArmRight" type="Sprite" parent="."]
position = Vector2( 1.99336, -1.53336 )
texture = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ArmLeft" type="Sprite" parent="Body"]
texture = ExtResource( 1 )

[node name="ArmRightRT" type="RemoteTransform2D" parent="Body"]
position = Vector2( 1.99336, -1.53336 )
remote_path = NodePath("../../ArmRight")

[node name="Hands" type="Area2D" parent="Body" groups=[
"player",
]]
position = Vector2( 4.45816, 5.87667 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hands"]
shape = SubResource( 2 )

[node name="GrabPos" type="Position2D" parent="Body/Hands"]
position = Vector2( 3, 0 )

[node name="DropPos" type="Position2D" parent="Body/Hands"]
position = Vector2( 11.4156, 4.86345 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/still = SubResource( 3 )
anims/walking = SubResource( 4 )

[node name="PickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="WalkingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
